# Match_Prediction

./: .gitignore  TODO.md  cricket_prediction_workflow.md  cricket_simulation_docs.md  hello.py  pyproject.toml  requirements.txt  run_scraper_cron.sh
data/t20s_json/: README.txt
notebooks/: baseline_model.ipynb  feature_eng.ipynb  model_development.ipynb  simulation.ipynb  trial.py
scripts/: data_parsing.py  data_segregation.py  gbm_v1.py  parse_betting_odds.py  parse_betting_odds_v2.py  parse_wip.py  parsing_v2.py  parsing_validation.py  sim_v1.py  sim_v1_1.py  sim_v1_2.py  test2.py  test_pipeline.py  test_pipeline_v3.py  xgboost_v1.py
scripts/sim_eval/: check_match_ids.py  debug_match_eval.py  loaders.py  match_evaluator.py  run_sim_eval.py  run_sim_eval_xgb.py  testaggregator.py
src/: bet_scraper.py  parse_gbm.py  preprocessor.py
