[project]
name = "match-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "filelock==3.16.1",
    "fonttools==4.55.3",
    "fsspec==2024.10.0",
    "ipykernel==6.22.0",
    "ipython==8.12.2",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "markupsafe==3.0.2",
    "matplotlib==3.7.1",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.1",
    "numpy==1.24.3",
    "packaging==24.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pyzmq==26.2.0",
    "selenium>=4.29.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "torch==2.0.1",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "wcwidth==0.2.13",
]
